// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds editor node through constructor 1`] = `
Object {
  "id": "foo",
  "options": Object {
    "id": "docId",
    "template": undefined,
    "type": "book",
  },
  "parameters": Object {
    "foo": "bar",
  },
  "title": "some title",
  "type": "document",
}
`;

exports[`can construct using builder (alt) 1`] = `
Object {
  "id": "yeah",
  "options": Object {
    "id": "wow",
    "template": "developer",
    "type": "book",
  },
  "parameters": Object {
    "bar": "foo",
  },
  "title": "Yeah",
  "type": "document",
}
`;

exports[`can construct using builder 1`] = `
Object {
  "id": "yeah",
  "options": Object {
    "id": "wow",
    "template": undefined,
    "type": "book",
  },
  "parameters": Object {
    "foo": "bar",
  },
  "title": "Yeah",
  "type": "document",
}
`;

exports[`can construct with schema type instead of schema type name 1`] = `
Object {
  "id": "yeah",
  "options": Object {
    "id": "wow",
    "template": undefined,
    "type": "post",
  },
  "title": "Yeah",
  "type": "document",
}
`;
